# hello_deploy

./: README.md  poem.txt  pyproject.toml
src/hello_deploy/: main.py
