[project]
name = "hello_deploy"
version = "0.1.0"
description = "hello_deploy using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
]

[project.scripts]
kickoff = "hello_deploy.main:kickoff"
run_crew = "hello_deploy.main:kickoff"
plot = "hello_deploy.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
